# oncoomics

./: .dockerignore  .gitignore  Dockerfile  README.md  main.nf  nextflow.config  package.json  pyproject.toml
aws/: submit_route.py
docs/: BUG_AUDIT.md  ORTHOGONAL_VALIDATION_SAMPLES.md  PHASE3_PARALLEL_COMPUTE.md  PHASE_STATUS.md  PROJECT_PLAN.md  PYTHON_IMPLEMENTATION.md  RAW_DATA_READINESS.md  README.md  SOURCE_MAP.md  WIKI_SOURCE_SUMMARY.md  aws-silly-ec2.md  bug-audit.md  clinicalization-orchestration.md  diana-raw-inputs.md  nextflow.md  orthogonal-validation-samples.md  phase-status.md  phase3-parallel-compute.md  project-plan.md  python-implementation.md  raw-data-readiness.md  readme.md  reference-panel-label-rules.md  source-map.md  terms.md  vendor-normalization.md  wiki-source-summary.md
manifests/: alignment_smoke_samplesheet.csv  clinical_assay_claim_boundaries.csv  clinical_change_control_triggers.csv  clinical_known_answer_fixtures.csv  clinical_qc_threshold_locks.csv  clinical_signoff_workflow.csv  clinical_validation_evidence_links.csv  clinical_validation_packet_sections.csv  diana_raw_delivery_checksums.sha256  diana_raw_delivery_manifest.csv  (+27 more)
py/: README.md  pyproject.toml
py/src/diana_omics/: __init__.py  alignment.py  cli.py  diana_raw.py  domain.py  paths.py  utils.py  workflow_tasks.py
py/src/diana_omics/commands/: __init__.py  analyze_hrd.py  audit_raw_tools.py  build_diana_raw_template.py  build_raw_samplesheets.py  build_reviewer_packet.py  build_rna_context.py  diagnose_pipeline.py  fetch_full_reference_smoke_assets.py  fetch_human_reference_smoke_assets.py  fetch_phase1.py  fetch_phase3_wgs_smoke_assets.py  fetch_production_somatic_assets.py  run_full_reference_smoke.py  run_full_wes_benchmark.py  run_phase3_wgs_smoke.py  run_production_somatic_smoke.py  run_raw_smoke.py  run_sra_benchmark.py  stage_diana_raw_analysis.py  verify_diana_raw.py  verify_outputs.py  verify_plan.py
py/tests/: test_audit_and_production_helpers.py  test_build_raw_samplesheets_command.py  test_cli_parity.py  test_diana_raw_contract.py  test_domain.py  test_phase3_wgs_helpers.py  test_report_and_alignment_helpers.py  test_sra_benchmark.py  test_utils.py  test_vcf_normalization.py
scripts/: lib.ts  (+71 more)
(+1077 files in other folders)
