[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diana-omics-py"
version = "0.1.0"
description = "Python rewrite of the Diana HRD omics orchestration scripts"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.19", "pytest>=8.0", "ruff>=0.14"]

[project.scripts]
diana-omics = "diana_omics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "SIM117", "SIM118", "UP006", "UP007", "UP022", "UP035", "UP045"]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
explicit_package_bases = true
mypy_path = "py/src"
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
